added unit test for ControllerExceptionsHandler plus house keeping