@@ -9,11 +9,7 @@ import gov.cabinetoffice.api.prototype.repositories.SubmissionRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static java.util.stream.Collectors.*;
 
 @Service
 @RequiredArgsConstructor
@@ -30,7 +26,7 @@ public class SubmissionsService {
         }
         else {
             List<SubmissionDTO> submissionDTOList = submissions.stream()
-                    .map(submissionMapper::submissionToSubmissionDto).collect(toList());
+                    .map(submissionMapper::submissionToSubmissionDto).toList();
             return SubmissionsDTO.builder().submissions(submissionDTOList).build();
         }
     }
